server/compilers/goLiteJS/src/test/ml1/invalid/decl33.go
// missing left parenthesis in distributed type declaration
package main

type
    num int
    float double
)
